--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -47,7 +47,7 @@
             </td>
             <td>
               {% for tip in tips_by_user[user.id] %}
-                Match ID {{ tip.match }} → {{ tip.selected_team }}<br>
+                Match ID {{ tip.match }}<br>
               {% endfor %}
             </td>
           </tr>
